5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4357/executions/1577_1333.log
== SUBMITION (2019-03-14 19:31:50) 
-- CODE:
expressao = 
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.212884
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    expressao = 
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:32:01) 
-- CODE:
expressao = 
print(30-3**2+8//3**2*10)
-- ERROR:
File "XXXX", line 1
    expressao = 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:32:52) 
-- CODE:
 print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.132991
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    print(30-3**2+8//3**2*10)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:33:08) 
-- CODE:
 print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.211616
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    print(30-3**2+8//3**2*10)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:33:17) 
-- CODE:
 print(30-3**2+8//3**2*10)
-- ERROR:
File "XXXX", line 1
    print(30-3**2+8//3**2*10)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:34:09) 
-- CODE:
 print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:34:29) 
-- CODE:
 print(30 _ 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    print(30 _ 3 ** 2 + 8 // 3 ** 2 * 10)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:35:14) 
-- CODE:
 print(30 - 3 ** 2 + 8 // 3 ** 3 * 10)
-- ERROR:
File "XXXX", line 1
    print(30 - 3 ** 2 + 8 // 3 ** 3 * 10)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:36:39) 
-- CODE:
 print(30-3**2+8//3**2*10)
-- ERROR:
File "XXXX", line 1
    print(30-3**2+8//3**2*10)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:38:03) 
-- CODE:
 print(30-3**2+8//3**2*10)
-- ERROR:
File "XXXX", line 1
    print(30-3**2+8//3**2*10)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:38:11) 
-- CODE:
 print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.125651
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    print(30-3**2+8//3**2*10)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 19:39:09) 
-- CODE:
 print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.170288
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 19:39:33) 
-- CODE:
 print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 09:48:34) 
-- CODE:
 print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- ERROR:
File "XXXX", line 1
    print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 09:48:55) 
-- CODE:
 print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
-- EXECUTION TIME:
0.1531
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    print(30 - 3 ** 2 + 8 // 3 ** 2 * 10)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 20:43:19) 
-- CODE:
 print(*30-**2+8//3**2*10*)
-- EXECUTION TIME:
0.131674
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    print(*30-**2+8//3**2*10*)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:43:28) 
-- CODE:
 print(*30-**2+8//3**2*10*)
-- ERROR:
File "XXXX", line 1
    print(*30-**2+8//3**2*10*)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:43:42) 
-- CODE:
 print(*30-**2+8//3**2*10*)
-- ERROR:
File "XXXX", line 1
    print(*30-**2+8//3**2*10*)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 20:44:22) 
-- CODE:
 print(*30-3**2+8//3**2*10*)
-- EXECUTION TIME:
0.135375
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    print(*30-3**2+8//3**2*10*)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 20:44:44) 
-- CODE:
 print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.151028
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    print(30-3**2+8//3**2*10)
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 20:46:34) 
-- CODE:
expressao=
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.14376
-- ERROR:
  File "/home/codebench/codes/1577/1333/main.py", line 1
    expressao=
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:46:46) 
-- CODE:
expressao=
print(30-3**2+8//3**2*10)
-- ERROR:
File "XXXX", line 1
    expressao=
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-15 20:48:08) 
-- CODE:
expressao= 30 - 3 ** 2 + 8// 3 ** 2 * 10
print(30-3**2+8//3**2*10)
-- OUTPUT:
21
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-15 20:48:19) 
-- CODE:
expressao= 30 - 3 ** 2 + 8// 3 ** 2 * 10
print(30-3**2+8//3**2*10)
-- EXECUTION TIME:
0.157068
-- TEST CASE 1:
---- input:
xx
---- correct output:
21
---- user output:
21
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
